--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,7 @@
 Flask==2.3.3
-requests==2.31.0
-SQLAlchemy==2.0.21
+SQLAlchemy==2.0.23
 Werkzeug==2.3.7
+Jinja2==3.1.2
+psycopg2-binary==2.9.7
+gunicorn==21.2.0
+python-dotenv==1.0.0
